--- a/.github/workflows/self-hosted.yml
+++ b/.github/workflows/self-hosted.yml
@@ -3,7 +3,7 @@ on:
 
 jobs:
     echo-job:
-        runs-on: ubuntu-latest
+        runs-on: [prod,main,self-hosted,Linux,X64]
         steps:
             - name: Print date
               run: date
